{
  "version": 4,
  "terraform_version": "1.9.4",
  "serial": 153,
  "lineage": "8da3d799-bb17-28cc-56b7-3b88a14ac307",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ip-test-env",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ef9b79554e5c31ea",
            "arn": "arn:aws:ec2:us-east-2:017820688251:elastic-ip/eipalloc-0ef9b79554e5c31ea",
            "association_id": "eipassoc-066e6161455d7b330",
            "domain": "vpc",
            "id": "eipalloc-0ef9b79554e5c31ea",
            "instance": "i-0aa273b6f046be2f4",
            "network_border_group": "us-east-2",
            "network_interface": "eni-08247f867fff35d05",
            "private_dns": "ip-10-0-55-111.us-east-2.compute.internal",
            "private_ip": "10.0.55.111",
            "public_dns": "ec2-3-131-24-116.us-east-2.compute.amazonaws.com",
            "public_ip": "3.131.24.116",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.terraform_project",
            "aws_key_pair.ssh_tf_key_pair",
            "aws_security_group.ingress-all-test",
            "aws_subnet.subnet-uno",
            "aws_vpc.test-env",
            "tls_private_key.rsa_4096"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04844b6a5db468c0f",
            "arn": "arn:aws:ec2:us-east-2:017820688251:elastic-ip/eipalloc-04844b6a5db468c0f",
            "association_id": "eipassoc-05c56999a21b7b928",
            "domain": "vpc",
            "id": "eipalloc-04844b6a5db468c0f",
            "instance": "i-0661c170fe405c41b",
            "network_border_group": "us-east-2",
            "network_interface": "eni-0eb0f9a3ba824c19e",
            "private_dns": "ip-10-0-49-67.us-east-2.compute.internal",
            "private_ip": "10.0.49.67",
            "public_dns": "ec2-3-128-46-120.us-east-2.compute.amazonaws.com",
            "public_ip": "3.128.46.120",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.terraform_project",
            "aws_key_pair.ssh_tf_key_pair",
            "aws_security_group.ingress-all-test",
            "aws_subnet.subnet-uno",
            "aws_vpc.test-env",
            "tls_private_key.rsa_4096"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b7c764a00c9e989e",
            "arn": "arn:aws:ec2:us-east-2:017820688251:elastic-ip/eipalloc-0b7c764a00c9e989e",
            "association_id": "eipassoc-03f3fca570091edf2",
            "domain": "vpc",
            "id": "eipalloc-0b7c764a00c9e989e",
            "instance": "i-0c8d83f19cb4bca79",
            "network_border_group": "us-east-2",
            "network_interface": "eni-0f46688fc9a1c9059",
            "private_dns": "ip-10-0-32-132.us-east-2.compute.internal",
            "private_ip": "10.0.32.132",
            "public_dns": "ec2-13-59-175-18.us-east-2.compute.amazonaws.com",
            "public_ip": "13.59.175.18",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.terraform_project",
            "aws_key_pair.ssh_tf_key_pair",
            "aws_security_group.ingress-all-test",
            "aws_subnet.subnet-uno",
            "aws_vpc.test-env",
            "tls_private_key.rsa_4096"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "terraform_project",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0aa8fc2422063977a",
            "arn": "arn:aws:ec2:us-east-2:017820688251:instance/i-0aa273b6f046be2f4",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0aa273b6f046be2f4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "key_rhel_pem",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08247f867fff35d05",
            "private_dns": "ip-10-0-55-111.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.55.111",
            "public_dns": "ec2-3-144-109-179.us-east-2.compute.amazonaws.com",
            "public_ip": "3.144.109.179",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0da80f353552d5971",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0966bec62962be84f"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08e933936f8f6080d",
            "tags": {
              "Name": "k8s-[count.index]"
            },
            "tags_all": {
              "Name": "k8s-[count.index]"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0966bec62962be84f"
            ]
          },
          "dependencies": [
            "aws_key_pair.ssh_tf_key_pair",
            "aws_security_group.ingress-all-test",
            "aws_subnet.subnet-uno",
            "aws_vpc.test-env",
            "tls_private_key.rsa_4096"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0aa8fc2422063977a",
            "arn": "arn:aws:ec2:us-east-2:017820688251:instance/i-0661c170fe405c41b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0661c170fe405c41b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "key_rhel_pem",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0eb0f9a3ba824c19e",
            "private_dns": "ip-10-0-49-67.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.49.67",
            "public_dns": "ec2-3-15-0-93.us-east-2.compute.amazonaws.com",
            "public_ip": "3.15.0.93",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-02caf1266c073c059",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0966bec62962be84f"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08e933936f8f6080d",
            "tags": {
              "Name": "k8s-[count.index]"
            },
            "tags_all": {
              "Name": "k8s-[count.index]"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0966bec62962be84f"
            ]
          },
          "dependencies": [
            "aws_key_pair.ssh_tf_key_pair",
            "aws_security_group.ingress-all-test",
            "aws_subnet.subnet-uno",
            "aws_vpc.test-env",
            "tls_private_key.rsa_4096"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0aa8fc2422063977a",
            "arn": "arn:aws:ec2:us-east-2:017820688251:instance/i-0c8d83f19cb4bca79",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c8d83f19cb4bca79",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "key_rhel_pem",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f46688fc9a1c9059",
            "private_dns": "ip-10-0-32-132.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.32.132",
            "public_dns": "ec2-18-118-144-252.us-east-2.compute.amazonaws.com",
            "public_ip": "18.118.144.252",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0410b34ada3be7054",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0966bec62962be84f"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08e933936f8f6080d",
            "tags": {
              "Name": "k8s-[count.index]"
            },
            "tags_all": {
              "Name": "k8s-[count.index]"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0966bec62962be84f"
            ]
          },
          "dependencies": [
            "aws_key_pair.ssh_tf_key_pair",
            "aws_security_group.ingress-all-test",
            "aws_subnet.subnet-uno",
            "aws_vpc.test-env",
            "tls_private_key.rsa_4096"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "test-env-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:017820688251:internet-gateway/igw-03f5cfbfe5a98621a",
            "id": "igw-03f5cfbfe5a98621a",
            "owner_id": "017820688251",
            "tags": {
              "Name": "test-env-gw"
            },
            "tags_all": {
              "Name": "test-env-gw"
            },
            "vpc_id": "vpc-0c612255937087366"
          },
          "dependencies": [
            "aws_vpc.test-env"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route-table-test-env",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:017820688251:route-table/rtb-079bb85c2202f760a",
            "id": "rtb-079bb85c2202f760a",
            "owner_id": "017820688251",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03f5cfbfe5a98621a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "test-env-route-table"
            },
            "tags_all": {
              "Name": "test-env-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c612255937087366"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.test-env-gw",
            "aws_vpc.test-env"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09cead54d2815d28c",
            "route_table_id": "rtb-079bb85c2202f760a",
            "subnet_id": "subnet-08e933936f8f6080d"
          },
          "dependencies": [
            "aws_internet_gateway.test-env-gw",
            "aws_route_table.route-table-test-env",
            "aws_subnet.subnet-uno",
            "aws_vpc.test-env"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ingress-all-test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:017820688251:security-group/sg-0966bec62962be84f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0966bec62962be84f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow-all-sg",
            "name_prefix": "",
            "owner_id": "017820688251",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c612255937087366"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.test-env"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-uno",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:017820688251:subnet/subnet-08e933936f8f6080d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.32.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08e933936f8f6080d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "017820688251",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0c612255937087366"
          },
          "dependencies": [
            "aws_vpc.test-env"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "test-env",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:017820688251:vpc/vpc-0c612255937087366",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03b98c893bf34187d",
            "default_route_table_id": "rtb-0437e6ec6e7995375",
            "default_security_group_id": "sg-0e0e548dd79f4a0f0",
            "dhcp_options_id": "dopt-07688149742385fb2",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c612255937087366",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0437e6ec6e7995375",
            "owner_id": "017820688251",
            "tags": {
              "Name": "test-env"
            },
            "tags_all": {
              "Name": "test-env"
            }
          }
        }
      ]
    }
  ]
}